sqlflex/parser/BaseRuleParser.py
# Generated from ./BaseRule.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BaseRuleParser ( Parser ):

    grammarFileName = "BaseRule.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Default does not match anything'", "'&&'", 
                     "'||'", "'!'", "'|'", "'&'", "'^'", "'%'", "':'", "'+'", 
                     "'-'", "'*'", "'/'", "'\\'", "'.'", "'.*'", "'='", 
                     "'<>'", "'>'", "'>='", "'<'", "'<='", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "'\"'", "'''", "'?'", 
                     "'@'", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'DO NOT MATCH ANY THING, JUST FOR GENERATOR'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "AND_", "CONCAT_", "NOT_", 
                      "VERTICAL_BAR_", "AMPERSAND_", "CARET_", "MOD_", "COLON_", 
                      "PLUS_", "MINUS_", "ASTERISK_", "SLASH_", "BACKSLASH_", 
                      "DOT_", "DOT_ASTERISK_", "EQ_", "NEQ_", "GT_", "GTE_", 
                      "LT_", "LTE_", "LP_", "RP_", "LBE_", "RBE_", "LBT_", 
                      "RBT_", "COMMA_", "DQ_", "SQ_", "QUESTION_", "AT_", 
                      "SEMI_", "WS", "ALL", "AND", "ANY", "AS", "ASC", "AVG", 
                      "BETWEEN", "BIT", "BOTH", "BY", "CASE", "CAST", "CHAR", 
                      "CHARACTER", "COALESCE", "COLLATE", "CONVERT", "COUNT", 
                      "CROSS", "CURRENT_DATE", "DATE", "DAY", "DEC", "DECIMAL", 
                      "DESC", "DISTINCT", "DOUBLE", "ELSE", "END", "ESCAPE", 
                      "EXCEPT", "EXISTS", "EXTRACT", "FALSE", "FLOAT", "FOR", 
                      "FROM", "FULL", "GLOBAL", "GROUP", "HAVING", "HOUR", 
                      "IN", "INNER", "INT", "INTEGER", "INTERSECT", "INTERVAL", 
                      "IS", "JOIN", "LEADING", "LEFT", "LIKE", "LOCAL", 
                      "MATCH", "MAX", "MIN", "MINUTE", "MONTH", "NATURAL", 
                      "NATIONAL", "NCHAR", "NOT", "NULL", "NULLIF", "NUMERIC", 
                      "OF", "OFFSET", "ON", "ONLY", "OR", "ORDER", "OUTER", 
                      "PARTIAL", "POSITION", "PRECISION", "READ", "REAL", 
                      "RIGHT", "SECOND", "SELECT", "SET", "SMALLINT", "SOME", 
                      "SUBSTRING", "SUM", "THEN", "TIME", "TIMESTAMP", "TRAILING", 
                      "TRIM", "TRUE", "TO", "UNION", "UNIQUE", "UNKNOWN", 
                      "UPDATE", "USING", "VARCHAR", "VARYING", "WHEN", "WHERE", 
                      "WITH", "YEAR", "ZONE", "FOR_GENERATOR", "IDENTIFIER_", 
                      "MASK_TOKEN", "PAREN_TOKEN", "SQ_TOKEN", "DQ_TOKEN", 
                      "STRING_", "NUMBER_", "HEX_DIGIT_", "BIT_NUM_" ]

    RULE_parameterMarker = 0
    RULE_literals = 1
    RULE_asteriskLiteral = 2
    RULE_stringLiterals = 3
    RULE_numberLiterals = 4
    RULE_dateTimeLiterals = 5
    RULE_hexadecimalLiterals = 6
    RULE_bitValueLiterals = 7
    RULE_booleanLiterals = 8
    RULE_nullValueLiterals = 9
    RULE_identifier = 10
    RULE_unreservedWord = 11
    RULE_reservedWord = 12
    RULE_variable = 13
    RULE_schemaName = 14
    RULE_tableName = 15
    RULE_columnName = 16
    RULE_tableAlias = 17
    RULE_unqualifiedShorthand = 18
    RULE_qualifiedShorthand = 19
    RULE_owner = 20
    RULE_name = 21
    RULE_constraintName = 22
    RULE_columnNames = 23
    RULE_tableNames = 24
    RULE_characterSetName = 25
    RULE_expr = 26
    RULE_andOperator = 27
    RULE_orOperator = 28
    RULE_exprList = 29
    RULE_exprListwithModifier = 30
    RULE_notOperator = 31
    RULE_booleanPrimary = 32
    RULE_comparisonOperator = 33
    RULE_isOperator = 34
    RULE_predicate = 35
    RULE_inPredicate = 36
    RULE_betweenPredicate = 37
    RULE_likePredicate = 38
    RULE_bitExpr = 39
    RULE_logicalBitOperator = 40
    RULE_multiplyBitOperator = 41
    RULE_plusBitOperator = 42
    RULE_concatBitOperator = 43
    RULE_simpleExpr = 44
    RULE_mask_token = 45
    RULE_paren_token = 46
    RULE_existExpr = 47
    RULE_uniqueExpr = 48
    RULE_functionCall = 49
    RULE_aggregationFunction = 50
    RULE_aggregationFunctionName = 51
    RULE_modifier = 52
    RULE_specialFunction = 53
    RULE_castFunction = 54
    RULE_castExpression = 55
    RULE_convertFunction = 56
    RULE_positionFunction = 57
    RULE_substringFunction = 58
    RULE_extractFunction = 59
    RULE_extractExpression = 60
    RULE_trimFunction = 61
    RULE_regularFunction = 62
    RULE_regularFunctionName = 63
    RULE_matchExpression = 64
    RULE_caseExpression = 65
    RULE_caseWhen = 66
    RULE_caseElse = 67
    RULE_intervalExpression = 68
    RULE_intervalUnit = 69
    RULE_subquery = 70
    RULE_dataType = 71
    RULE_dataTypeName = 72
    RULE_dataTypeLength = 73
    RULE_characterSet = 74
    RULE_collateClause = 75
    RULE_ignoredIdentifier = 76

    ruleNames =  [ "parameterMarker", "literals", "asteriskLiteral", "stringLiterals", 
                   "numberLiterals", "dateTimeLiterals", "hexadecimalLiterals", 
                   "bitValueLiterals", "booleanLiterals", "nullValueLiterals", 
                   "identifier", "unreservedWord", "reservedWord", "variable", 
                   "schemaName", "tableName", "columnName", "tableAlias", 
                   "unqualifiedShorthand", "qualifiedShorthand", "owner", 
                   "name", "constraintName", "columnNames", "tableNames", 
                   "characterSetName", "expr", "andOperator", "orOperator", 
                   "exprList", "exprListwithModifier", "notOperator", "booleanPrimary", 
                   "comparisonOperator", "isOperator", "predicate", "inPredicate", 
                   "betweenPredicate", "likePredicate", "bitExpr", "logicalBitOperator", 
                   "multiplyBitOperator", "plusBitOperator", "concatBitOperator", 
                   "simpleExpr", "mask_token", "paren_token", "existExpr", 
                   "uniqueExpr", "functionCall", "aggregationFunction", 
                   "aggregationFunctionName", "modifier", "specialFunction", 
                   "castFunction", "castExpression", "convertFunction", 
                   "positionFunction", "substringFunction", "extractFunction", 
                   "extractExpression", "trimFunction", "regularFunction", 
                   "regularFunctionName", "matchExpression", "caseExpression", 
                   "caseWhen", "caseElse", "intervalExpression", "intervalUnit", 
                   "subquery", "dataType", "dataTypeName", "dataTypeLength", 
                   "characterSet", "collateClause", "ignoredIdentifier" ]

    EOF = Token.EOF
    T__0=1
    AND_=2
    CONCAT_=3
    NOT_=4
    VERTICAL_BAR_=5
    AMPERSAND_=6
    CARET_=7
    MOD_=8
    COLON_=9
    PLUS_=10
    MINUS_=11
    ASTERISK_=12
    SLASH_=13
    BACKSLASH_=14
    DOT_=15
    DOT_ASTERISK_=16
    EQ_=17
    NEQ_=18
    GT_=19
    GTE_=20
    LT_=21
    LTE_=22
    LP_=23
    RP_=24
    LBE_=25
    RBE_=26
    LBT_=27
    RBT_=28
    COMMA_=29
    DQ_=30
    SQ_=31
    QUESTION_=32
    AT_=33
    SEMI_=34
    WS=35
    ALL=36
    AND=37
    ANY=38
    AS=39
    ASC=40
    AVG=41
    BETWEEN=42
    BIT=43
    BOTH=44
    BY=45
    CASE=46
    CAST=47
    CHAR=48
    CHARACTER=49
    COALESCE=50
    COLLATE=51
    CONVERT=52
    COUNT=53
    CROSS=54
    CURRENT_DATE=55
    DATE=56
    DAY=57
    DEC=58
    DECIMAL=59
    DESC=60
    DISTINCT=61
    DOUBLE=62
    ELSE=63
    END=64
    ESCAPE=65
    EXCEPT=66
    EXISTS=67
    EXTRACT=68
    FALSE=69
    FLOAT=70
    FOR=71
    FROM=72
    FULL=73
    GLOBAL=74
    GROUP=75
    HAVING=76
    HOUR=77
    IN=78
    INNER=79
    INT=80
    INTEGER=81
    INTERSECT=82
    INTERVAL=83
    IS=84
    JOIN=85
    LEADING=86
    LEFT=87
    LIKE=88
    LOCAL=89
    MATCH=90
    MAX=91
    MIN=92
    MINUTE=93
    MONTH=94
    NATURAL=95
    NATIONAL=96
    NCHAR=97
    NOT=98
    NULL=99
    NULLIF=100
    NUMERIC=101
    OF=102
    OFFSET=103
    ON=104
    ONLY=105
    OR=106
    ORDER=107
    OUTER=108
    PARTIAL=109
    POSITION=110
    PRECISION=111
    READ=112
    REAL=113
    RIGHT=114
    SECOND=115
    SELECT=116
    SET=117
    SMALLINT=118
    SOME=119
    SUBSTRING=120
    SUM=121
    THEN=122
    TIME=123
    TIMESTAMP=124
    TRAILING=125
    TRIM=126
    TRUE=127
    TO=128
    UNION=129
    UNIQUE=130
    UNKNOWN=131
    UPDATE=132
    USING=133
    VARCHAR=134
    VARYING=135
    WHEN=136
    WHERE=137
    WITH=138
    YEAR=139
    ZONE=140
    FOR_GENERATOR=141
    IDENTIFIER_=142
    MASK_TOKEN=143
    PAREN_TOKEN=144
    SQ_TOKEN=145
    DQ_TOKEN=146
    STRING_=147
    NUMBER_=148
    HEX_DIGIT_=149
    BIT_NUM_=150

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParameterMarkerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION_(self):
            return self.getToken(BaseRuleParser.QUESTION_, 0)

        def getRuleIndex(self):
            return BaseRuleParser.RULE_parameterMarker

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterMarker" ):
                listener.enterParameterMarker(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterMarker" ):
                listener.exitParameterMarker(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterMarker" ):
                return visitor.visitParameterMarker(self)
            else:
                return visitor.visitChildren(self)




    def parameterMarker(self):

        localctx = BaseRuleParser.ParameterMarkerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parameterMarker)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(BaseRuleParser.QUESTION_)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.StringLiteralsContext,0)


        def numberLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.NumberLiteralsContext,0)


        def dateTimeLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.DateTimeLiteralsContext,0)


        def hexadecimalLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.HexadecimalLiteralsContext,0)


        def bitValueLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.BitValueLiteralsContext,0)


        def booleanLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.BooleanLiteralsContext,0)


        def nullValueLiterals(self):
            return self.getTypedRuleContext(BaseRuleParser.NullValueLiteralsContext,0)


        def asteriskLiteral(self):
            return self.getTypedRuleContext(BaseRuleParser.AsteriskLiteralContext,0)


        def getRuleIndex(self):
            return BaseRuleParser.RULE_literals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiterals" ):
                listener.enterLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiterals" ):
                listener.exitLiterals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):

        localctx = BaseRuleParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literals)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.stringLiterals()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.numberLiterals()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.dateTimeLiterals()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.hexadecimalLiterals()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 160
                self.bitValueLiterals()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 161
                self.booleanLiterals()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 162
                self.nullValueLiterals()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 163
                self.asteriskLiteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsteriskLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASTERISK_(self):
            return self.getToken(BaseRuleParser.ASTERISK_, 0)

        def getRuleIndex(self):
            return BaseRuleParser.RULE_asteriskLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsteriskLiteral" ):
                listener.enterAsteriskLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsteriskLiteral" ):
                listener.exitAsteriskLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsteriskLiteral" ):
                return visitor.visitAsteriskLiteral(self)
            else:
                return visitor.visitChildren(self)




    def asteriskLiteral(self):

        localctx = BaseRuleParser.AsteriskLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asteriskLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(BaseRuleParser.ASTERISK_)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_(self):
            return self.getToken(BaseRuleParser.STRING_, 0)

        def characterSetName(self):
            return self.getTypedRuleContext(BaseRuleParser.CharacterSetNameContext,0)


        def collateClause(self):
            return self.getTypedRuleContext(BaseRuleParser.CollateClauseContext,0)


        def SQ_TOKEN(self):
            return self.getToken(BaseRuleParser.SQ_TOKEN, 0)

        def getRuleIndex(self):
            return BaseRuleParser.RULE_stringLiterals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiterals" ):
                listener.enterStringLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiterals" ):
                listener.exitStringLiterals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiterals" ):
                return visitor.visitStringLiterals(self)
            else:
                return visitor.visitChildren(self)




    def stringLiterals(self):

        localctx = BaseRuleParser.StringLiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stringLiterals)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [142, 147]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==142:
                    self.state = 168
                    self.characterSetName()


                self.state = 171
                self.match(BaseRuleParser.STRING_)
                self.state = 173
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 172
                    self.collateClause()


                pass
            elif token in [145]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(BaseRuleParser.SQ_TOKEN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberLiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_(self):
            return self.getToken(BaseRuleParser.NUMBER_, 0)

        def PLUS_(self):
            return self.getToken(BaseRuleParser.PLUS_, 0)

        def MINUS_(self):
            return self.getToken(BaseRuleParser.MINUS_, 0)

        def getRuleIndex(self):
            return BaseRuleParser.RULE_numberLiterals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberLiterals" ):
                listener.enterNumberLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberLiterals" ):
                listener.exitNumberLiterals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberLiterals" ):
                return visitor.visitNumberLiterals(self)
            else:
                return visitor.visitChildren(self)




    def numberLiterals(self):

        localctx = BaseRuleParser.NumberLiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_numberLiterals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 178
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 181
            self.match(BaseRuleParser.NUMBER_)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateTimeLiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_(self):
            return self.getToken(BaseRuleParser.STRING_, 0)

        def DATE(self):
            return self.getToken(BaseRuleParser.DATE, 0)

        def TIME(self):
            return self.getToken(BaseRuleParser.TIME, 0)

        def TIMESTAMP(self):
            return self.getToken(BaseRuleParser.TIMESTAMP, 0)

        def CURRENT_DATE(self):
            return self.getToken(BaseRuleParser.CURRENT_DATE, 0)

        def getRuleIndex(self):
            return BaseRuleParser.RULE_dateTimeLiterals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateTimeLiterals" ):
                listener.enterDateTimeLiterals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateTimeLiterals" ):
                listener.exitDateTimeLiterals(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDateTimeLiterals" ):
                return visitor.visitDateTimeLiterals(self)
            else:
                return visitor.visitChildren(self)




    def dateTimeLiterals(self):
